# DTALite_release

./: .gitignore  ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DTALite_validate.ipynb  How2Build.md  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  TAPLite.sln  TAPLite.vcxproj  TAPLite.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  dtalite_validate.ipynb  setup.py
.github/: CODEOWNERS
.github/workflows/: build-linux.yml  build-macos-arm.yml  build-macos.yml  build-wheels-push.yml  build-wheels.yml  build-windows.yml
DTALite/: DTALite.py  __init__.py  path.py
DTALite/core/: TAPLite.cpp  TAPLite.h  path_engine.h
TAPLite/: __init__.py  bindings.cpp  path.py
TAPLite.dir/Release/TAPLite.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  TAPLite.lastbuildstate
TAPLite/core/: TAPLite.cpp  TAPLite.h  path_engine.h
backup/: CMakeLists.txt  CMakePresets.json  TF_for_optimization.ipynb  flow_through_tensors.ipynb
backup/TAPLite/: TAPLite.cpp  TAPLite.h  TAPLite.vcxproj  TAPLite.vcxproj.filters
backup/data_sets/01_4_node_network/minimum_input/: Equilibrium_GAP.xls  Fixed Point and Gradient Descent with Analytical Expressions.xlsx
backup/data_sets/01_4_node_network/minimum_input_ODME/: demand.csv  link.csv  node.csv  route_assignment.csv  settings.csv
backup/data_sets/01_4_node_network/minimum_input_multi_modal/: demand_hov.csv  mode_type.csv
backup/data_sets/02_Sioux_Falls/minimum_input/: baress.py  route_assignment.csv  shortest_path.py  summary_log_file.txt
backup/data_sets/I10_QVDF_benchmark/: QVDF.xlsx  demand - Copy.csv  demand.csv  link.csv  link_performance - Copy.csv  mode_type.csv  node.csv  settings.csv
backup/data_sets/chicago_regional/: link_result.csv  sample_mode_type.csv  sample_settings.csv
backup/data_sets/chicago_sketch/: settings.csv  summary_log_file.txt
backup/optimization_codes/: Braess_paradox.py  time-dependent_transit_service_network.py  traffic_assignment_GMNS.py  traffic_assignment_cvxpy.py  traffic_assignment_ipopt.py
backup/python_source_code/: GMNS_learning.py  TAPLite_v2.py  accessibility_matrix.csv  agent.csv  demand.csv  link.csv  logfile.txt  node.csv  path.csv  route_assignment.csv
backup/python_source_code/SF/: link.csv  tensor_based_ODME.py  tensor_based_traffic_assignment.py
backup/release/: mode_type.csv  settings.csv
data_sets/02_Sioux_Falls/: link.csv  mode_type.csv  node.csv  settings.csv
data_sets/03_chicago_sketch/: link.csv  mode_type.csv
examples/: main.py
src/: CMakeLists.txt  TAPLite.cpp  TAPLite.h
test/: link_performance.csv  od_performance.csv  sample_settings.csv  settings.csv  sim_debug.csv  sim_info.csv  simulation_debug.csv  summary_log_file.txt  test.py  trajectory.csv
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
